--- a/trunk/AlgPedia/algorithm/templates/display_algorithm_by_id.html
+++ b/trunk/AlgPedia/algorithm/templates/display_algorithm_by_id.html
@@ -69,9 +69,11 @@ tinyMCE.init({
 			<h3><a href="{{ classification_algp_url }}"	target="_blank">{{algorithm_classification }}</a></h3>
 				<div id="classification">
 					<a href="{{ classification_dbp_url }}" target="_blank"> [More Information] </a>
+					<a href="http://localhost:8000/site_media/{{rdf_path}}" target="_blank"> <img style="width: 20px; height:20px" src="http://localhost:8000/site_media/images/rdf.jpeg" /> </a>
 				</div> <br/>
 			<form id="add_algorithm_form">
 				<input type="hidden" id="algorithm_id" value="{{algorithm_id}}" \>
+				
 				<table class="table table-hover well">
 					 <thead>
 						<tr>
