--- a/AlgPedia/algorithm/templates/add_algorithm.html
+++ b/AlgPedia/algorithm/templates/add_algorithm.html
@@ -1,189 +1,38 @@
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-<link rel="stylesheet"
-	href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" />
-<script
-	src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"
-	type="text/javascript"></script>
-<link rel="stylesheet"
-	href="http://localhost:8000/site_media/css/bootstrap-wysihtml5.css" />
-	<script
-	src="http://localhost:8000/site_media/js/wysihtml5.js"
-	type="text/javascript"></script>
-<script
-	src="http://localhost:8000/site_media/js/bootstrap-wysihtml5.js"
-	type="text/javascript"></script>
-	<script type="text/javascript" src="http://localhost:8000/site_media/tiny_mce/tiny_mce.js"></script>
-	
-
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>AlgPedia</title>
-<div class="alert alert-info ">
-	<h4>
-		<i class="icon-align-center"></i> AlgPedia
-	</h4>
-</div>
-</head>
-<body>
-	<div class="container-fluid">
-		<div class="row-fluid">
-			<div class="span2">
-				<table class="table table-condensed">
-					<tr>
-						<td><a href="http://localhost:8000/">Main Page</a>
-						</td>
-					</tr>
-					<tr>
-						<td><a href="http://localhost:8000/admin">Admin Page</a>
-						</td>
-					</tr>
-					<tr>
-						<td><a href="http://localhost:8000/show/cat/all">Classifications</a>
-						</td>
-					</tr>
-					<tr>
-						<td><a href="http://localhost:8000/show/alg/all">Algorithms</a>
-						</td>
-					</tr>
-				</table>
+{% extends "main_template.html" %}
+{% block content %}
+	<h4>{{ classif.name }}</h4>
+	&nbsp;&nbsp;&nbsp;
+	<form class="form-horizontal">
+		<input type="hidden" name="classification_id" value="{{classif.id}}" />
+		<div class="control-group">
+			<label class="control-label" for="inputName"> Name :</label>
+			<div class="controls">
+				<input type="text" name="algorithm_name" id="inputName" placeholder="Algorithm Name">
 			</div>
-			<div class="control-group info span10 ">
-				<div class="input-append">
-					<input class="input-xxlarge" id="search" placeholder="Search" type="text">
-					<button class="btn btn-info" type="button">Search</button>
+		</div>					
+		<div class="control-group">
+			<label class="control-label" for="inputAuthor">Author :</label>
+				<div class="controls">
+					<input type="text" name="author_name" id="inputAuthor">&nbsp;&nbsp;
+					<label class="checkbox inline"> 
+						<input type="checkbox" id="Unknown" value=""> Unknown
+					</label>
+				</div>	
+		</div>				
+		&nbsp;&nbsp;&nbsp;
+		<div class="control-group">
+		<!---<div class='btn-group'>
+		<a class="btn" href="#"><i class="icon-indent-right"></i></a>
+		<a class="btn" href="#"><i class="icon-indent-left"></i></a>
+		<a class="btn" href="#"><i class="icon-bold"></i></a>
+		<a class="btn" href="#"><i class="icon-italic"></i></a>
+		</div> -->
+			<label class="control-label" for="inputAlgorithm">About:</label>
+				<div class="controls">
+					<textarea id="algorithm_about" class="textarea" style="width: 810px; height: 200px"></textarea>
 				</div>
-			</div>
-			&nbsp;&nbsp;&nbsp;
-			<div class="span10 alert alert-info">
-				<h4>{{ classif.name }}</h4>
-				&nbsp;&nbsp;&nbsp;
-				<form class="form-horizontal">
-					<input type="hidden" name="classification_id" value="{{classif.id}}" />
-					<div class="control-group">
-						<label class="control-label" for="inputName"> Name :</label>
-						<div class="controls">
-							<input type="text" name="algorithm_name" id="inputName" placeholder="Algorithm Name">
-						</div>
-					</div>
-					
-					<div class="control-group">
-						<label class="control-label" for="inputAuthor">Author :</label>
-						<div class="controls">
-							<input type="text" name="author_name" id="inputAuthor">&nbsp;&nbsp;
-							<label class="checkbox inline"> 
-								<input type="checkbox" id="Unknown" value=""> Unknown
-							</label>
-						</div>				
-						
-						&nbsp;&nbsp;&nbsp;
-					<div class="control-group">
-						<!---<div class='btn-group'>
-							<a class="btn" href="#"><i class="icon-indent-right"></i></a>
-							<a class="btn" href="#"><i class="icon-indent-left"></i></a>
-							<a class="btn" href="#"><i class="icon-bold"></i></a>
-							<a class="btn" href="#"><i class="icon-italic"></i></a>
-						</div> -->
-						<label class="control-label" for="inputAlgorithm">About:</label>
-						
-						<div class="controls">
-							<textarea id="algorithm_about" class="textarea" style="width: 810px; height: 200px"></textarea>
-						</div>
-					</div>
-					<button class="btn btn-large btn-block" type="button" id="add">Add Algorithm</button>
-				</form>
-			</div>
 		</div>
-</body>
-</html>
+		<button class="btn btn-large btn-block btn-info" type="button" id="add_alg">Add Algorithm</button>
+	</form>
 
-
-<script>
-	$(function() {
-		$("#inputAuthor").attr("readonly", true);
-		$("#Unknown").attr("checked", true);
-		/*$('#algorithm_about').wysihtml5({
-			"font-styles": true, //Font styling, e.g. h1, h2, etc. Default true
-			"emphasis": true, //Italics, bold, etc. Default true
-			"lists": true, //(Un)ordered lists, e.g. Bullets, Numbers. Default true
-			"html": false, //Button which allows you to edit the generated HTML. Default false
-			"link": true, //Button to insert a link. Default true
-			"image": true, //Button to insert an image. Default true,
-			"color": false //Button to change color of font  
-		});*/
-
-		$("#Unknown").click(function() {
-			if ($('#Unknown').attr('checked')) {
-				$("#inputAuthor").val("");
-				$("#inputAuthor").attr("readonly", true);
-				$("#Unknown").attr("checked", true);
-			} else {
-				$("#inputAuthor").attr("readonly", false);
-				$("#Unknown").attr("checked", false);
-			}
-		});
-		$("#add").click(function() {
-			var form = document.forms[0];
-			
-			var algorithm_author = form['author_name'].value;
-			var algorithm_about = tinymce.get('algorithm_about').getContent();
-			var classification_id = form['classification_id'].value;
-			var algorithm_name = form['algorithm_name'].value;
-			
-			alert(algorithm_about);
-			
-			window.location = "http://localhost:8000/added/alg/cat/"+classification_id+"/"+algorithm_name+"/"+algorithm_author+"/"+algorithm_about;
-			
-			//class_id / name / author / about
-			
-			
-			
-		});
-		
-		function save_implementation(){
-				alert("I was saved!");
-				window.location = "http://www.google.com";
-			}
-			
-			tinyMCE.init({
-					// General options
-					mode : "textareas",
-					theme : "advanced",
-					plugins : "autolink,lists,spellchecker,pagebreak,style,layer,table,save,advhr,advimage,advlink,emotions,iespell,inlinepopups,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras,template",
-
-					// Theme options
-					theme_advanced_buttons1 : "save,newdocument,|,bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,|,fontselect,fontsizeselect",
-					theme_advanced_buttons2 : "cut,copy,paste,pastetext,pasteword,|,search,replace,|,bullist,numlist,|,outdent,indent,|,undo,redo,",
-					theme_advanced_buttons3 : "sub,sup,|,charmap,emotions,iespell,media,advhr,|,print,|,ltr,rtl,|,fullscreen",
-					theme_advanced_buttons4 : "styleprops,spellchecker",
-					theme_advanced_toolbar_location : "top",
-					theme_advanced_toolbar_align : "left",
-					theme_advanced_statusbar_location : "bottom",
-					theme_advanced_resizing : true,
-
-					// Skin options
-					skin : "o2k7",
-					skin_variant : "silver",
-
-					// Example content CSS (should be your site CSS)
-					content_css : "./tiny_mce/css/content.css",
-
-					// Drop lists for link/image/media/template dialogs
-					template_external_list_url : "./tiny_mce/lists/js/template_list.js",
-					external_link_list_url : "./tiny_mce/lists/js/link_list.js",
-					external_image_list_url : "./tiny_mce/lists/js/image_list.js",
-					media_external_list_url : "./tiny_mce/lists/js/media_list.js",
-
-					save_onsavecallback : "save_implementation",
-					
-					// Replace values for the template plugin
-					template_replace_values : {
-							username : "Some User",
-							staffid : "991234"
-					}
-			});
-		
-		
-	});
-</script>
+{% endblock %}
