--- a/AlgPedia/algorithm/templates/display_all_classifications.html
+++ b/AlgPedia/algorithm/templates/display_all_classifications.html
@@ -1,64 +1,14 @@
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-<link rel="stylesheet"
-	href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" />
-<script
-	src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"
-	type="text/javascript"></script>
-
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>AlgPedia</title>
-<div class="alert alert-info ">
-	<h4><i class="icon-align-center"></i> AlgPedia</h4>
-</div>
-</head>
-<body>
-	<div class="container-fluid">
-		<div class="row-fluid">
-			<div class="span2">
-				<table class="table table-condensed">
-					<tr>
-						<td><a href="http://localhost:8000/">Main Page</a></td>
-					</tr>
-					<tr>
-						<td><a href="http://localhost:8000/admin">Admin Page</a></td>
-					</tr>
-					<tr>
-						<td><a href="http://localhost:8000/show/cat/all">Classifications</a>
-						</td>
-					</tr>
-					<tr>
-						<td><a href="http://localhost:8000/show/alg/all">Algorithms</a>
-						</td>
-					</tr>
-				</table>
-			</div>
-			
-			<div class="control-group info span10 ">
-				<div class="input-append">
-					<input class="input-xxlarge" id="search" placeholder="Search" type="text">
-					<button class="btn btn-info" type="button">Search</button>
-				</div>
-			</div>
-			&nbsp;&nbsp;&nbsp;
-			<div class="span10 alert alert-info">
-				<div id="classifications">
-			<table id="classifications_uri">
-							
-									
-				{% for class in classifications %}	
-					<tr>
-						<td><a href="{{class.link}}"> {{ class.name }} </td>
-					</tr>
+{% extends "main_template.html" %}
+{% block content %}
+	<div id="classifications">
+		<table class="table table-striped info" id="classifications_uri">									
+			{% for class in classifications %}	
+				<tr>
+					<td><a href="{{class.link}}"> {{ class.name }} </td>
+				</tr>
 				{% empty %}
-					<p> There are no classifications available. </p>
-				{% endfor %}
-				
-			</table>
-		</div>
-			</div>
-		</div>
-</body>
-</html>
+				<p> There are no classifications available. </p>
+			{% endfor %}
+		</table>
+	</div>
+{% endblock %}
