--- a/AlgPedia/algorithm/templates/display_classification.html
+++ b/AlgPedia/algorithm/templates/display_classification.html
@@ -1,83 +1,21 @@
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-<link rel="stylesheet"
-	href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" />
-<script
-	src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"
-	type="text/javascript"></script>
-
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>AlgPedia</title>
-<div class="alert alert-info ">
-	<h4><i class="icon-align-center"></i> AlgPedia</h4>
-</div>
-
-	<script>
-	$(function() {
-		$("#add").click(function() {
-			
-			var form = document.forms[0];
-			var classification_id = form['classification_id'].value;
-			
-			window.location = "http://localhost:8000/add/cat/id/"+classification_id;
-					
-		});
-	});
-	</script>
-</head>
-<body>
-	<div class="container-fluid">
-		<div class="row-fluid">
-			<div class="span2">
-				<table class="table table-condensed">
-					<tr>
-						<td><a href="http://localhost:8000/">Main Page</a></td>
-					</tr>
-					<tr>
-						<td><a href="http://localhost:8000/admin">Admin Page</a></td>
-					</tr>
-					<tr>
-						<td><a href="http://localhost:8000/show/cat/all">Classifications</a>
-						</td>
-					</tr>
-					<tr>
-						<td><a href="http://localhost:8000/show/alg/all">Algorithms</a>
-						</td>
-					</tr>
-				</table>
-			</div>
-			<div class="control-group info span10 ">
-				<div class="input-append">
-					<input class="input-xxlarge" id="search" placeholder="Search" type="text">
-					<button class="btn btn-info" type="button">Search</button>
-				</div>
-			</div>
-			&nbsp;&nbsp;&nbsp;
-			<div class="span10 alert alert-info">
-				<h4> {{ classif.name }} </h4>
-		<div id="classification">
-			<p> For more information click <a href="{{ classif.uri }}" target="_blank">here</a> </p>
-			
-			
+{% extends "main_template.html" %}
+{% block content %}
+	<h4> {{ classif.name }} </h4>
+	<div id="classification">
+		<p> For more information click <a href="{{ classif.uri }}" target="_blank">here</a> </p>
 			<!-- table containing algorithms with such classification -->
 			<form id="add_algorithm" >
-				<input type="hidden" name="classification_id" value="{{classif.id}}"/>
-				<input type="button" id="add" value="Add Algorithm" /></br></br>
-				
-				<table id="algorithms">
-					{% for alg in algorithms %}
+			<input type="hidden" name="classification_id" value="{{classif.id}}"/>
+			<input type="button" id="add_algorithm" value="Add Algorithm" /></br></br>				
+			<table id="algorithms" class="table table-striped info">
+				{% for alg in algorithms %}
 					<tr>
-							<td><a href="{{alg.link}}"> {{ alg.name }} </td>
-						</tr>
+						<td><a href="{{alg.link}}"> {{ alg.name }} </td>
+					</tr>
 					{% empty %}
 						<p> There are no Algorithms with this Classification. </p>
-					{% endfor %}
-				</table>
-			</form>
-		</div>
-			</div>
-		</div>
-</body>
-</html>
+				{% endfor %}
+			</table>
+		</form>
+	</div>
+{% endblock %}
